// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content matches snapshot 1`] = `
Array [
  <a
    className="css-1axmsgr e1wgaj6u0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  <div
    className="css-1xhj18k e2c66320"
  >
    <div
      className="css-nvmk2c-SidebarPlaceholder ef1l6aj0"
    >
      <button
        aria-label="Click to close the Table of Contents"
        className="css-18kav09-SidebarControl ef1l6aj1"
        onClick={[Function]}
        role="button"
      >
        <span />
        <span />
        <span />
      </button>
      <div
        className="css-ax7mdy-SidebarBody ef1l6aj2"
      >
        <nav>
          <ol>
            <li
              className="css-1l540di-NavItem ef1l6aj3"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
        <div>
          <h2>
            Table of Contents
          </h2>
          <nav>
            <ol>
              <li
                className="css-1l540di-NavItem ef1l6aj3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "page title",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="css-1l540di-NavItem ef1l6aj3"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "page title2",
                          }
                        }
                        href="/books/book/pages/page2"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
    <div
      className="css-aaliej e1u8sqr80"
      id="main-content"
      tabIndex={-1}
    >
      <div>
        <h1
          className="css-1r7wtuo eq5krme0"
        >
          book title
           / 
          page title
        </h1>
      </div>
      <div
        className="css-3ww2y8 ec3co800"
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "some page content yo",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`content renders empty state 1`] = `
Array [
  <a
    className="css-1axmsgr e1wgaj6u0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  <div
    className="css-1xhj18k e2c66320"
  >
    <div
      className="css-nvmk2c-SidebarPlaceholder ef1l6aj0"
    >
      <button
        aria-label="Click to close the Table of Contents"
        className="css-18kav09-SidebarControl ef1l6aj1"
        onClick={[Function]}
        role="button"
      >
        <span />
        <span />
        <span />
      </button>
      <div
        className="css-ax7mdy-SidebarBody ef1l6aj2"
      >
        <nav>
          <ol>
            <li
              className="css-1l540di-NavItem ef1l6aj3"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <div
      className="css-aaliej e1u8sqr80"
      id="main-content"
      tabIndex={-1}
    >
      <div />
      <div
        className="css-3ww2y8 ec3co800"
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
